...
    <NumberPicker
        android:id="@+id/hours_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hours_hint"
        app:layout_constraintRight_toLeftOf="@id/minutes_picker"/>

    <TextView
        android:id="@+id/minutes_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minutes"
...
