<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_meeting_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/meeting_recyclerview_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/schedule_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_24"
        app:backgroundTint="?attr/colorAccent"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:tint="@color/white"
        android:contentDescription="@string/create_new_meeting_content_description" />

</FrameLayout>